--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -5,10 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".features.celestialcalendar.presentation.CalendarFragment">
 
-    <TextView
+    <CalendarView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textSize="50dp"
-        android:text="@string/calendar_text" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
