--- a/app/src/main/res/layout/dialog_characteristics_body.xml
+++ b/app/src/main/res/layout/dialog_characteristics_body.xml
@@ -2,25 +2,73 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/margin_extra_high">
 
+
+    <TextView
+        android:id="@+id/body_mass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_extra_high"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:text="@string/mass"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/body_density"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Densidad: "
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="@dimen/margin_extra_high"
+        android:layout_marginTop="@dimen/margin_small"
+        android:text="@string/density"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/body_mass" />
 
     <TextView
         android:id="@+id/body_temperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Temperatura: "
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="@dimen/margin_extra_high"
+        android:layout_marginTop="@dimen/margin_small"
+        android:text="@string/temperature"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/body_density" />
 
+    <TextView
+        android:id="@+id/body_radius"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_extra_high"
+        android:layout_marginTop="@dimen/margin_small"
+        android:text="@string/radius"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/body_temperature" />
+
+    <TextView
+        android:id="@+id/body_gravity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_extra_high"
+        android:layout_marginTop="@dimen/margin_small"
+        android:text="@string/gravity"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/body_radius" />
+
+    <TextView
+        android:id="@+id/body_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_extra_high"
+        android:layout_marginTop="@dimen/margin_small"
+        android:text="@string/celestial_body_type"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/body_gravity" />
 </androidx.constraintlayout.widget.ConstraintLayout>
