--- a/app/src/main/res/layout/fragment_celestial_bodies.xml
+++ b/app/src/main/res/layout/fragment_celestial_bodies.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".features.celestialobodies.presentation.CelestialBodiesFragment">
+    tools:context=".features.celestialbodies.presentation.CelestialBodiesFragment">
 
     <include
         android:id="@+id/main_header"
@@ -18,7 +18,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_celestial_bodies"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="@dimen/null_value"
         app:layout_constraintTop_toBottomOf="@+id/main_header"
         tools:listitem="@layout/item_celestial_body" />
 
