--- a/app/src/main/res/layout/item_celestial_body.xml
+++ b/app/src/main/res/layout/item_celestial_body.xml
@@ -29,20 +29,10 @@
                 android:id="@+id/image_body_item"
                 android:layout_width="@dimen/image_size_extra_extra_high"
                 android:layout_height="@dimen/image_size_extra_extra_high"
-                android:contentDescription=""
+                android:contentDescription="@string/image_body_item"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:src="@tools:sample/avatars" />
-            <!--
-                <com.google.android.material.divider.MaterialDivider
-                    android:id="@+id/divider_item"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_medium"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/image_body_item" />
-                    -->
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
