--- a/app/src/main/res/layout/dialog_characteristics_body.xml
+++ b/app/src/main/res/layout/dialog_characteristics_body.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/margin_extra_high">
-
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_margin="@dimen/margin_extra_high"
+    tools:context="com.fouadaha.astralis.features.celestialbodies.presentation.BodyDetailFragment">
 
     <TextView
         android:id="@+id/body_mass"
