--- a/app/src/main/res/layout/dialog_filters.xml
+++ b/app/src/main/res/layout/dialog_filters.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/grid_filter"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:columnCount="4"
-    android:padding="@dimen/margin_medium">
+    android:padding="@dimen/margin_medium"
+    tools:context="com.fouadaha.astralis.features.celestialbodies.presentation.CelestialBodiesFragment">
 
     <CheckBox
         android:id="@+id/checkbox_planet"
