--- a/app/src/main/res/layout/fragment_body_detail.xml
+++ b/app/src/main/res/layout/fragment_body_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/padding_medium"
-    tools:context=".features.celestialbodies.presentation.BodyDetailFragment">
+    tools:context="com.fouadaha.astralis.features.celestialbodies.presentation.BodyDetailFragment">
 
     <include
         android:id="@+id/detail_header"
@@ -36,10 +36,11 @@
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/description_body_detail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_medium"
+        android:layout_height="@dimen/null_value"
+        android:layout_margin="@dimen/margin_small"
+        android:textSize="@dimen/font_size_medium"
         android:text="@string/body_description"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_body_detail" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
