--- a/app/src/main/res/layout/view_error.xml
+++ b/app/src/main/res/layout/view_error.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context="com.fouadaha.astralis.core.presentation.views.ErrorAppView">
 
     <ImageView
         android:id="@+id/image_error"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_width="@dimen/image_size_extra_extra_extra_high"
+        android:layout_height="@dimen/image_size_extra_extra_extra_high"
         android:layout_marginTop="@dimen/margin_extra_high"
-        app:layout_constraintTop_toTopOf="parent"
         tools:src="@tools:sample/avatars" />
 
     <TextView
@@ -21,10 +21,7 @@
         android:layout_marginTop="@dimen/margin_small"
         android:text="@string/title_error"
         android:textSize="@dimen/font_size_extra_high"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_error" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/description_error"
@@ -33,11 +30,7 @@
         android:layout_marginTop="@dimen/margin_small"
         android:text="@string/description_error"
         android:textSize="@dimen/font_size_high"
-        android:textStyle="bold"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_error" />
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/button_retry_error"
@@ -45,10 +38,6 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/button_retry"
-        android:textSize="@dimen/font_size_extra_high"
         android:layout_marginTop="@dimen/margin_medium"
-        app:layout_constraintTop_toBottomOf="@+id/description_error"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:textSize="@dimen/font_size_high" />
+</LinearLayout>
