feature: values of mobile sensors move interface

--- a/app/src/main/res/layout/fragment_sky_orientation.xml
+++ b/app/src/main/res/layout/fragment_sky_orientation.xml
@@ -1,15 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".features.skyorientation.presentation.SkyOrientationFragment">
+    android:orientation="vertical"
+    tools:context="com.fouadaha.astralis.features.skyorientation.presentation.SkyOrientationFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textSize="50dp"
-        android:text="@string/sky_fragment" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/sky_fragment"
+        android:textSize="50dp" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/ejeX"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_medium"
+        android:gravity="center"
+        android:text="Eje X:"
+        android:textSize="30dp" />
+
+    <TextView
+        android:id="@+id/ejeY"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_medium"
+        android:gravity="center"
+        android:text="Eje Y:"
+        android:textSize="30dp" />
+
+    <TextView
+        android:id="@+id/ejeZ"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_medium"
+        android:gravity="center"
+        android:text="Eje Z:"
+        android:textSize="30dp" />
+
+</LinearLayout>
