feat: create the custom view of planets orbits

--- a/app/src/main/res/layout/fragment_sky_orientation.xml
+++ b/app/src/main/res/layout/fragment_sky_orientation.xml
@@ -6,39 +6,8 @@
     android:orientation="vertical"
     tools:context="com.fouadaha.astralis.features.skyorientation.presentation.SkyOrientationFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/sky_fragment"
-        android:textSize="50dp" />
-
-    <TextView
-        android:id="@+id/ejeX"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_medium"
-        android:gravity="center"
-        android:text="Eje X:"
-        android:textSize="30dp" />
-
-    <TextView
-        android:id="@+id/ejeY"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_medium"
-        android:gravity="center"
-        android:text="Eje Y:"
-        android:textSize="30dp" />
-
-    <TextView
-        android:id="@+id/ejeZ"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_medium"
-        android:gravity="center"
-        android:text="Eje Z:"
-        android:textSize="30dp" />
-
+    <com.fouadaha.astralis.features.skyorientation.presentation.OrbitView
+        android:id="@+id/orbitView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
