feat: calendar events and notifications (not work yet)

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -13,7 +13,7 @@
     <item
         android:id="@+id/calendarFragment"
         android:enabled="true"
-        android:icon="@drawable/ic_launcher_foreground"
+        android:icon="@drawable/ic_calendar"
         android:title="@string/calendar_text" />
 
 </menu>
