--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/calendarFragment"
-        android:name="com.fouadaha.astralis.features.celestialcalendar.presentation.CalendarFragment"
+        android:name="com.fouadaha.astralis.features.astronomicalcalendar.presentation.CalendarFragment"
         android:label="fragment_calendar"
         tools:layout="@layout/fragment_calendar" />
     <fragment
